edge/log/build_2026-04-18_16-32-45/bishe_monitor/stdout_stderr.log
-- Found ament_cmake: 1.3.12 (/opt/ros/humble/share/ament_cmake/cmake)
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found ament_cmake_gtest: 1.3.12 (/opt/ros/humble/share/ament_cmake_gtest/cmake)
-- Found rclcpp: 16.0.16 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.7 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.7 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.7 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.9 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found bishe_msgs: 0.1.0 (/home/jetson/projects/bishe/edge/install/bishe_msgs/share/bishe_msgs/cmake)
-- Found cv_bridge: 3.2.1 (/opt/ros/humble/share/cv_bridge/cmake)
-- Found gtest sources under '/opt/ros/humble/src/gtest_vendor': C++ tests using 'Google Test' will be built
-- Configuring done
-- Generating done
-- Build files have been written to: /home/jetson/projects/bishe/edge/build/bishe_monitor
Consolidate compiler generated dependencies of target gtest_main
Consolidate compiler generated dependencies of target gtest
Consolidate compiler generated dependencies of target monitor_node
[ 14%] Built target gtest
[ 28%] Built target gtest_main
[ 35%] Building CXX object CMakeFiles/monitor_node.dir/src/monitor_node.cpp.o
Consolidate compiler generated dependencies of target test_async_task_worker
Consolidate compiler generated dependencies of target test_alarm_playback_command
Consolidate compiler generated dependencies of target test_alarm_event_payload
Consolidate compiler generated dependencies of target test_alarm_upload_gate
[ 50%] Built target test_async_task_worker
[ 64%] Built target test_alarm_playback_command
[ 78%] Built target test_alarm_upload_gate
[ 92%] Built target test_alarm_event_payload
/home/jetson/projects/bishe/edge/src/bishe_monitor/src/monitor_node.cpp:295:8: error: ‘void MonitorNode::resultCallback(bishe_msgs::msg::DetectorResult_<std::allocator<void> >::SharedPtr)’ cannot be overloaded with ‘void MonitorNode::resultCallback(bishe_msgs::msg::DetectorResult_<std::allocator<void> >::SharedPtr)’
  295 |   void resultCallback(const bishe_msgs::msg::DetectorResult::SharedPtr msg)
      |        ^~~~~~~~~~~~~~
/home/jetson/projects/bishe/edge/src/bishe_monitor/src/monitor_node.cpp:123:8: note: previous declaration ‘void MonitorNode::resultCallback(bishe_msgs::msg::DetectorResult_<std::allocator<void> >::SharedPtr)’
  123 |   void resultCallback(const bishe_msgs::msg::DetectorResult::SharedPtr msg)
      |        ^~~~~~~~~~~~~~
/home/jetson/projects/bishe/edge/src/bishe_monitor/src/monitor_node.cpp:353:8: error: ‘void MonitorNode::playAlarm(const string&)’ cannot be overloaded with ‘void MonitorNode::playAlarm(const string&)’
  353 |   void playAlarm(const std::string &violation_type)
      |        ^~~~~~~~~
/home/jetson/projects/bishe/edge/src/bishe_monitor/src/monitor_node.cpp:134:8: note: previous declaration ‘void MonitorNode::playAlarm(const string&)’
  134 |   void playAlarm(const std::string &violation_type)
      |        ^~~~~~~~~
/home/jetson/projects/bishe/edge/src/bishe_monitor/src/monitor_node.cpp:399:8: error: ‘bool MonitorNode::captureAndUpload(const cv::Mat&, const string&)’ cannot be overloaded with ‘bool MonitorNode::captureAndUpload(const cv::Mat&, const string&)’
  399 |   bool captureAndUpload(const cv::Mat &frame, const std::string &violation_type)
      |        ^~~~~~~~~~~~~~~~
/home/jetson/projects/bishe/edge/src/bishe_monitor/src/monitor_node.cpp:142:8: note: previous declaration ‘bool MonitorNode::captureAndUpload(const cv::Mat&, const string&)’
  142 |   bool captureAndUpload(const cv::Mat &frame, const std::string &violation_type)
      |        ^~~~~~~~~~~~~~~~
/home/jetson/projects/bishe/edge/src/bishe_monitor/src/monitor_node.cpp: In member function ‘void MonitorNode::playAlarm(const string&)’:
/home/jetson/projects/bishe/edge/src/bishe_monitor/src/monitor_node.cpp:134:37: warning: unused parameter ‘violation_type’ [-Wunused-parameter]
  134 |   void playAlarm(const std::string &violation_type)
      |                  ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
/home/jetson/projects/bishe/edge/src/bishe_monitor/src/monitor_node.cpp: In member function ‘bool MonitorNode::captureAndUpload(const cv::Mat&, const string&)’:
/home/jetson/projects/bishe/edge/src/bishe_monitor/src/monitor_node.cpp:145:3: warning: no return statement in function returning non-void [-Wreturn-type]
  145 |   }
      |   ^
/home/jetson/projects/bishe/edge/src/bishe_monitor/src/monitor_node.cpp:142:40: warning: unused parameter ‘frame’ [-Wunused-parameter]
  142 |   bool captureAndUpload(const cv::Mat &frame, const std::string &violation_type)
      |                         ~~~~~~~~~~~~~~~^~~~~
/home/jetson/projects/bishe/edge/src/bishe_monitor/src/monitor_node.cpp:142:66: warning: unused parameter ‘violation_type’ [-Wunused-parameter]
  142 |   bool captureAndUpload(const cv::Mat &frame, const std::string &violation_type)
      |                                               ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/monitor_node.dir/build.make:76：CMakeFiles/monitor_node.dir/src/monitor_node.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:163：CMakeFiles/monitor_node.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
